[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.5",
    "pysocks>=1.7.1",
    "ruff>=0.13.3",
    "pytest>=8.4.2",
    "fastapi>=0.118.0",
    "pydantic>=2.11.10",
    "uvicorn>=0.37.0",
    "httpx>=0.28.1",
]
